# Price-Prediction-of-Second-Hand-Smartphones-Based-on-LightGBM

./: .gitignore  DATA_PREPROCESSING.md  LICENSE  README.md  lightgbm_method.py  predict.py  pyproject.toml  requirements.txt  svm_method.py  xgboost_method.py
data/: feature_mapping_table.xlsx  price_prediction_percent_error.txt  processed_phone_prices_en.xlsx  processed_phone_prices_zh.xlsx  raw_phone_prices.xlsx  used_phone_encoding.xlsx
figure/: Data_Correlation_Map.py  Data_Histogram.py  Data_Statistics_Description.py
model/: LightGBM_phone_price-predict.pkl
model_old/: SVM_phone_price-predict.pkl  phone_price-predict.pkl
preprocess/: label_mapping_input.py  price_data_preprocessing.py
